--- a/css/marshall.css
+++ b/css/marshall.css
@@ -1230,6 +1230,7 @@ h1 a {
   position: absolute;
   top: 10px;
   left: 10px;
+  padding-bottom: 10px;
 }
 #results ol > li .container .stretch .info .machines > ul {
   margin: 0 0 20px 75px;
@@ -1293,9 +1294,9 @@ h1 a {
 #results ol > li .container .stretch .info .related ul li div.add a {
   color: #FFF000;
   background-color: #01205a;
-  margin: 5px;
   padding: 3px 5px;
   text-decoration: none;
+  display: inline-block;
 }
 #results ol > li .container .stretch .info .related ul li div.add a:hover {
   color: #fff;
@@ -2347,141 +2348,18 @@ h1 a {
   }
 
   /* spares results */
-  #results ol {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-  #results ol > li {
-    background-color: #FFF;
-    overflow: hidden;
-    margin: 0 0 20px;
-    position: relative;
-    padding-bottom: 10px;
-  }
-  #results ol > li h3 {
-    background: #DDD;
-    padding: 8px 10px;
-    color: #555;
-    font-size: 16px;
-  }
-  #results ol > li img {
-    float: left;
-  }
-  #results ol > li .container {
-    float: left;
-    width: 100%;
-    margin-left: -150px;
-  }
-  #results ol > li .container .stretch {
-    margin-left: 150px;
-    padding: 0;
-    content: "";
-    clear: both;
-    display: block;
-  }
   #results ol > li .container .stretch .pricing {
-    margin: 0;
-    padding: 5px 0 0 0;
-    list-style: none;
     width: inherit;
     float: none;
-    font-weight: bold;
-    color: #444;
-    font-size: 13px;
-  }
-  #results ol > li .container .stretch .pricing li {
-    padding: 5px 15px;
   }
   #results ol > li .container .stretch .pricing li .quantity {
     width: 90px;
   }
   #results ol > li .container .stretch .info {
-    font-weight: bold;
-    font-size: 13px;
-    color: #444;
-    float: none;
-    width: 100%;
     margin-right: 0;
   }
   #results ol > li .container .stretch .info .machines {
     margin-right: 0;
-    padding: 10px;
-    position: relative;
-  }
-  #results ol > li .container .stretch .info .machines > .title {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-  }
-  #results ol > li .container .stretch .info .machines > ul {
-    margin: 0 0 20px 75px;
-    padding: 0;
-    list-style: none;
-    float: left;
-  }
-  #results ol > li .container .stretch .info .machines > ul li {
-    float: left;
-    padding: 0 5px 5px 0;
-  }
-  #results ol > li .container .stretch .info .machines > ul li a {
-    background: #DDD;
-    padding: 3px 10px;
-    margin: 0;
-    display: block;
-    text-decoration: none;
-    color: #555;
-  }
-  #results ol > li .container .stretch .info .machines > ul li a:hover {
-    background: #BBB;
-    color: #333;
-  }
-  #results ol > li .container .stretch .info .categories {
-    clear: left;
-  }
-  #results ol > li .container .stretch .info .related {
-    padding-top: 20px;
-  }
-  #results ol > li .container .stretch .info .related ul {
-    margin: 0;
-    padding: 2px 0 0 0;
-    list-style: none;
-  }
-  #results ol > li .container .stretch .info .related ul li {
-    margin-bottom: 3px;
-    position: relative;
-    padding-right: 40px;
-  }
-  #results ol > li .container .stretch .info .related ul li div {
-    display: inline-block;
-  }
-  #results ol > li .container .stretch .info .related ul li div.part {
-    background: #DDD;
-    color: #555;
-    padding: 3px 10px;
-  }
-  #results ol > li .container .stretch .info .related ul li div.part a {
-    text-decoration: none;
-    color: #444;
-  }
-  #results ol > li .container .stretch .info .related ul li div.part:hover {
-    background: #BBB;
-    color: #333;
-  }
-  #results ol > li .container .stretch .info .related ul li div.add {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  #results ol > li .container .stretch .info .related ul li div.add a {
-    color: #FFF000;
-    background-color: #01205a;
-    margin: 5px;
-    padding: 3px 5px;
-    text-decoration: none;
-  }
-  #results ol > li .container .stretch .info .related ul li div.add a:hover {
-    color: #fff;
   }
 }
 /* tablet portrait and mobile landscape */
@@ -2718,6 +2596,55 @@ h1 a {
     box-sizing: border-box;
   }
 
+  /* filers */
+  .filters {
+    float: left;
+    margin: 0 -10px 0 -10px;
+    padding: 0;
+    list-style: none;
+  }
+  .filters li {
+    width: 100%;
+    margin: 0 0 10px 0;
+    float: none;
+    height: inherit;
+  }
+  .filters li .filterList {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    float: none;
+  }
+  .filters li .filterList li {
+    width: auto;
+    height: inherit;
+    background: transparent;
+    margin: 0;
+    float: none;
+  }
+  .filters li .filterList li a {
+    text-decoration: none;
+    padding: 5px 12px;
+    line-height: 14px;
+    display: block;
+    font-weight: bold;
+    font-size: 13px;
+    color: #444;
+    background: #d4d4d4;
+    border-top: 1px solid #fff;
+  }
+  .filters li .filterList li a:hover {
+    background: #888;
+    color: #EEE;
+  }
+  .filters li .filterList li a.selected {
+    background: #555;
+    color: #EEE;
+  }
+  .filters li .filterList li a.selected:hover {
+    background: #888;
+  }
+
   .carousel .copy h2,
   .mainbox h2 {
     font-size: 1.2em;
@@ -2795,6 +2722,38 @@ h1 a {
   }
   .content-detail img.set-of-two {
     width: 100% !important;
+  }
+
+  #results ol > li img {
+    float: none;
+    width: 100%;
+  }
+  #results ol > li .container {
+    float: none;
+    margin-left: 0;
+  }
+  #results ol > li .container .stretch {
+    margin-left: 0;
+  }
+  #results ol > li .container .stretch .pricing {
+    width: inherit;
+    float: none;
+  }
+  #results ol > li .container .stretch .pricing li .quantity {
+    width: 90px;
+  }
+  #results ol > li .container .stretch .info {
+    margin-right: 0;
+  }
+  #results ol > li .container .stretch .info .machines {
+    margin-right: 0;
+  }
+  #results ol > li .container .stretch .info .machines .title {
+    position: static;
+  }
+  #results ol > li .container .stretch .info .machines > ul {
+    margin: 0 0 20px 0;
+    float: left;
   }
 
   #configure-machine select {
