--- a/css/marshall.css
+++ b/css/marshall.css
@@ -36,40 +36,6 @@ select {
   color: #001848;
 }
 
-.mobile input[type="text"],
-.mobile input[type="email"],
-.mobile input[type="password"],
-.mobile input[type="number"],
-.mobile select {
-  font-size: 1.1em;
-}
-
-.mobile textarea,
-.mobile input[type="text"],
-.mobile input[type="email"],
-.mobile input[type="password"],
-.mobile input[type="number"],
-.mobile select {
-  border-radius: 4px;
-  background-color: #fff;
-  font-family: 'Tahoma', Helvetica, Arial, sans-serif;
-  padding: 6px 10px;
-  border: 1px solid #ccc;
-  -webkit-appearance: none;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  resize: none;
-  font-size: 1.0em;
-}
-.mobile select {
-  background: url("../images/bg-select-schveron.jpg") center right no-repeat white;
-  padding: 5px 30px 5px 7px;
-}
-.mobile .error select {
-  background: url("../images/bg-select-schveron-error.jpg") center right no-repeat white;
-}
-
 * {
   outline: none;
 }
@@ -359,18 +325,18 @@ h1 a {
   font-size: 13px;
   line-height: 35px;
   font-weight: bold;
-  color: #fff000;
+  color: #fff000 !important;
   cursor: pointer;
   text-align: left;
   text-decoration: none;
-  display: block;
+  display: inline-block;
   clear: both;
 }
 .big-link.blue-link {
   background: url("../images/btn-more.png") 0 0 no-repeat;
 }
 .big-link.blue-link:hover {
-  color: #fff;
+  color: #fff !important;
 }
 
 .red-link {
@@ -395,49 +361,6 @@ h1 a {
 }
 .configure-btn.small-btn:hover {
   background: url("../images/priceconfigure-small-btn.png") left bottom no-repeat;
-}
-
-.old-mobile .big-link {
-  position: relative;
-  display: inline-block;
-  color: #fff;
-  padding: 9px 14px;
-  -moz-box-shadow: none;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  text-decoration: none;
-  font-size: 1.0em;
-  font-weight: bold;
-  letter-spacing: 2px;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-  cursor: pointer;
-  clear: both;
-  text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.7), 0px 1px 0px rgba(255, 255, 255, 0.3);
-}
-.old-mobile .red-link {
-  background: #BB1F1D;
-  background-image: -webkit-linear-gradient(top, #bb1f1d, #d20805);
-  background-image: -moz-linear-gradient(top, #bb1f1d, #d20805);
-  background-image: -ms-linear-gradient(top, #bb1f1d, #d20805);
-  background-image: -o-linear-gradient(top, #bb1f1d, #d20805);
-  background-image: linear-gradient(to bottom, #bb1f1d, #d20805);
-}
-.old-mobile .red-link:active, .old-mobile .red-link:hover {
-  background: #F20E08;
-  background-image: -webkit-linear-gradient(top, #f20e08, #f71102);
-  background-image: -moz-linear-gradient(top, #f20e08, #f71102);
-  background-image: -ms-linear-gradient(top, #f20e08, #f71102);
-  background-image: -o-linear-gradient(top, #f20e08, #f71102);
-  background-image: linear-gradient(to bottom, #f20e08, #f71102);
-}
-.old-mobile .blue-link {
-  background: #001649;
-  color: #fff;
-}
-.old-mobile .blue-link:active, .old-mobile .blue-link:hover {
-  background: #0f82ff;
 }
 
 .read-more {
@@ -639,11 +562,6 @@ h1 a {
   top: 12px;
 }
 
-.mobile .carousel .copy .big-link {
-  right: 20px;
-  top: 15px;
-}
-
 /* carousel controls */
 .carousel .bx-controls:after {
   content: "";
@@ -706,43 +624,6 @@ h1 a {
 .desktop .carousel .bx-pager-item a:hover,
 .desktop .carousel .bx-pager-item a.active {
   background: url("../images/nav_paging.png") -18px -19px no-repeat;
-}
-
-.mobile .carousel .bx-controls {
-  padding: 0 15px 15px 0;
-}
-.mobile .carousel .bx-pager-item {
-  display: inline-block;
-  padding-left: 12px;
-}
-.mobile .carousel .bx-pager-item a {
-  text-indent: -9000px;
-  background-color: #999;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  -webkit-transition: background 0.5s;
-  -moz-transition: background 0.5s;
-  -o-transition: background 0.5s;
-  transition: background 0.5s;
-}
-.mobile .carousel .bx-pager-item a:hover {
-  background-color: #666;
-  -webkit-transition: background 0.5s;
-  -moz-transition: background 0.5s;
-  -o-transition: background 0.5s;
-  transition: background 0.5s;
-}
-.mobile .carousel .bx-pager-item a.active,
-.mobile .carousel .bx-pager-item a.active:hover {
-  background-color: #bb1f1d;
-  -webkit-transition: background 0.5s;
-  -moz-transition: background 0.5s;
-  -o-transition: background 0.5s;
-  transition: background 0.5s;
 }
 
 /* configure widget */
@@ -922,16 +803,6 @@ h1 a {
 }
 .news-detail .big-link {
   margin-top: 30px;
-}
-
-.mobile .news-detail {
-  text-align: right;
-}
-.mobile .news-detail .content-copy {
-  text-align: left;
-}
-.mobile .news-detail .big-link {
-  margin-top: 10px;
 }
 
 /* -- */
@@ -1754,10 +1625,6 @@ h1 a {
   background: #dcdcdc;
 }
 
-.mobile .minibox .more {
-  padding: 10px 12px;
-}
-
 .minibox .copy p {
   padding: 7px 12px;
   line-height: 140%;
@@ -2035,10 +1902,6 @@ h1 a {
   color: #407f12;
 }
 
-.mobile .made-by {
-  background-color: #dcdcdc;
-}
-
 .made-by p {
   line-height: 160%;
 }
@@ -2242,6 +2105,16 @@ h1 a {
     padding: 0 8px 8px 0;
   }
 
+  .news-detail {
+    text-align: right;
+  }
+  .news-detail .content-copy {
+    text-align: left;
+  }
+  .news-detail .big-link {
+    margin-top: 10px;
+  }
+
   .news-page-navigation ul li a {
     border: 1px solid #ccc;
     padding: 0 10px;
@@ -2250,6 +2123,56 @@ h1 a {
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
     border-radius: 3px;
+  }
+
+  .carousel .bx-controls {
+    padding: 0 15px 15px 0;
+  }
+
+  .carousel .bx-pager-item {
+    display: inline-block;
+    padding-left: 12px;
+  }
+
+  .carousel .bx-pager-item a {
+    text-indent: -9000px;
+    background-color: #999;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-transition: background 0.5s;
+    -moz-transition: background 0.5s;
+    -o-transition: background 0.5s;
+    transition: background 0.5s;
+  }
+
+  .carousel .bx-pager-item a:hover {
+    background-color: #666;
+    -webkit-transition: background 0.5s;
+    -moz-transition: background 0.5s;
+    -o-transition: background 0.5s;
+    transition: background 0.5s;
+  }
+
+  .carousel .bx-pager-item a.active,
+  .carousel .bx-pager-item a.active:hover {
+    background-color: #bb1f1d;
+    -webkit-transition: background 0.5s;
+    -moz-transition: background 0.5s;
+    -o-transition: background 0.5s;
+    transition: background 0.5s;
+  }
+
+  .carousel .copy .big-link {
+    right: 20px;
+    top: 15px;
+  }
+
+  .made-by {
+    background-color: #dcdcdc;
   }
 
   .mainbox .minibox {
@@ -2596,6 +2519,87 @@ h1 a {
     box-sizing: border-box;
   }
 
+  textarea,
+  input[type="text"],
+  input[type="email"],
+  input[type="password"],
+  input[type="number"],
+  select {
+    border-radius: 4px;
+    background-color: #fff;
+    font-family: 'Tahoma', Helvetica, Arial, sans-serif;
+    padding: 6px 10px;
+    border: 1px solid #ccc;
+    -webkit-appearance: none;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    resize: none;
+    font-size: 1.0em;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="password"],
+  input[type="number"],
+  select {
+    font-size: 1.1em;
+    padding: 5px 7px !important;
+  }
+
+  select {
+    background: url("../images/bg-select-schveron.jpg") center right no-repeat white;
+    padding: 5px 30px 5px 7px;
+  }
+
+  .error select {
+    background: url("../images/bg-select-schveron-error.jpg") center right no-repeat white;
+  }
+
+  /* buttons */
+  .old-mobile .big-link {
+    position: relative;
+    display: inline-block;
+    color: #fff;
+    padding: 9px 14px;
+    -moz-box-shadow: none;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    text-decoration: none;
+    font-size: 1.0em;
+    font-weight: bold;
+    letter-spacing: 2px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    cursor: pointer;
+    clear: both;
+    text-shadow: 0px -1px 0px rgba(0, 0, 0, 0.7), 0px 1px 0px rgba(255, 255, 255, 0.3);
+  }
+  .old-mobile .red-link {
+    background: #BB1F1D;
+    background-image: -webkit-linear-gradient(top, #bb1f1d, #d20805);
+    background-image: -moz-linear-gradient(top, #bb1f1d, #d20805);
+    background-image: -ms-linear-gradient(top, #bb1f1d, #d20805);
+    background-image: -o-linear-gradient(top, #bb1f1d, #d20805);
+    background-image: linear-gradient(to bottom, #bb1f1d, #d20805);
+  }
+  .old-mobile .red-link:active, .old-mobile .red-link:hover {
+    background: #F20E08;
+    background-image: -webkit-linear-gradient(top, #f20e08, #f71102);
+    background-image: -moz-linear-gradient(top, #f20e08, #f71102);
+    background-image: -ms-linear-gradient(top, #f20e08, #f71102);
+    background-image: -o-linear-gradient(top, #f20e08, #f71102);
+    background-image: linear-gradient(to bottom, #f20e08, #f71102);
+  }
+  .old-mobile .blue-link {
+    background: #001649;
+    color: #fff;
+  }
+  .old-mobile .blue-link:active, .old-mobile .blue-link:hover {
+    background: #0f82ff;
+  }
+
   /* filers */
   .filters {
     float: left;
@@ -2722,6 +2726,10 @@ h1 a {
   }
   .content-detail img.set-of-two {
     width: 100% !important;
+  }
+
+  .minibox .more {
+    padding: 10px 12px;
   }
 
   #results ol > li img {
