--- a/scss/marshall.scss
+++ b/scss/marshall.scss
@@ -487,10 +487,11 @@ h1 a {
     }
 
     h2 {
-        font-size: 1.3em;
+        font-size: 18px;
         line-height: 110%;
         padding-bottom: 5px;
         text-shadow: 0px 1px 0px rgba(255,255,255,0.5);
+        color: $anotherblue;
     }
 }
 
@@ -582,7 +583,7 @@ h1 a {
 /* ================================================ */
 .main-heading {
     color: $anotherblue;
-    padding: 5px 10px 8px 12px;
+    padding: 0 10px 8px 12px;
 }
 
 .mobile {
@@ -795,8 +796,7 @@ h1 a {
 
 .breadcrumb {
     width: 960px;
-    margin: 0 auto;
-    margin-bottom: -25px;
+    margin: 0 auto -12px auto;
 
     &:after {
         @include clearfix;
@@ -1246,8 +1246,6 @@ h1 a {
                 font-size: 16px;
             }
 
-
-
             img {
                 float: left;
             }
@@ -1293,6 +1291,10 @@ h1 a {
                                 text-align: left;
                                 width: 91px;
                                 text-decoration: none;
+
+                                &:hover {
+                                    color: #fff;
+                                }
                             }
                         }
                     }
