--- a/css/marshall.css
+++ b/css/marshall.css
@@ -948,6 +948,12 @@ h1 a {
   border: 0;
   float: right;
 }
+.filters li p input.blue-link {
+  padding: 0 0 0 15px;
+  width: 100px;
+  background: url("../images/btn-bgs.png") left bottom no-repeat;
+  margin: 0;
+}
 .filters li #part_no {
   max-width: 92px;
 }
@@ -1020,6 +1026,9 @@ h1 a {
   line-height: 40px;
   color: #fff;
   font-size: 1.4em;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 #results ol {
   margin: 0;
@@ -1030,7 +1039,6 @@ h1 a {
   background-color: #FFF;
   overflow: hidden;
   margin: 0 0 20px;
-  position: relative;
   padding-bottom: 10px;
 }
 #results ol > li h3 {
@@ -1039,41 +1047,127 @@ h1 a {
   color: #555;
   font-size: 16px;
 }
-#results ol > li img {
-  float: left;
-}
 #results ol > li .container {
   float: left;
+  position: relative;
   width: 100%;
-  margin-left: -150px;
+  min-height: 170px;
 }
-#results ol > li .container .stretch {
+#results ol > li .container .spare-thumbnail {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 150px;
+}
+#results ol > li .container .info {
+  font-weight: bold;
+  font-size: 13px;
+  color: #444;
+  float: left;
   margin-left: 150px;
-  padding: 0;
-  content: "";
-  clear: both;
-  display: block;
+  margin-right: 200px;
 }
-#results ol > li .container .stretch .pricing {
+#results ol > li .container .info .machines {
+  padding: 10px;
+  position: relative;
+}
+#results ol > li .container .info .machines > .title {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  padding-bottom: 10px;
+}
+#results ol > li .container .info .machines > ul {
+  margin: 0 0 20px 75px;
+  padding: 0;
+  list-style: none;
+  float: left;
+}
+#results ol > li .container .info .machines > ul li {
+  float: left;
+  padding: 0 5px 5px 0;
+}
+#results ol > li .container .info .machines > ul li a {
+  background: #DDD;
+  padding: 3px 10px;
+  margin: 0;
+  display: block;
+  text-decoration: none;
+  color: #555;
+}
+#results ol > li .container .info .machines > ul li a:hover {
+  background: #BBB;
+  color: #333;
+}
+#results ol > li .container .info .categories {
+  clear: left;
+}
+#results ol > li .container .info .related {
+  padding-top: 20px;
+}
+#results ol > li .container .info .related ul {
+  margin: 0;
+  padding: 2px 0 0 0;
+  list-style: none;
+}
+#results ol > li .container .info .related ul li {
+  margin-bottom: 3px;
+  position: relative;
+  padding-right: 40px;
+}
+#results ol > li .container .info .related ul li div {
+  display: inline-block;
+}
+#results ol > li .container .info .related ul li div.part {
+  background: #DDD;
+  color: #555;
+  padding: 3px 10px;
+}
+#results ol > li .container .info .related ul li div.part a {
+  text-decoration: none;
+  color: #444;
+}
+#results ol > li .container .info .related ul li div.part:hover {
+  background: #BBB;
+  color: #333;
+}
+#results ol > li .container .info .related ul li div.add {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+#results ol > li .container .info .related ul li div.add a {
+  color: #FFF000;
+  background-color: #01205a;
+  padding: 3px 5px;
+  text-decoration: none;
+  display: inline-block;
+}
+#results ol > li .container .info .related ul li div.add a:hover {
+  color: #fff;
+}
+#results ol > li .container .pricing {
   margin: 0;
   padding: 5px 0 0 0;
   list-style: none;
   width: 200px;
-  float: right;
   font-weight: bold;
   color: #444;
   font-size: 13px;
+  position: absolute;
+  top: 0;
+  right: 0;
 }
-#results ol > li .container .stretch .pricing li {
+#results ol > li .container .pricing li {
   padding: 5px 15px;
 }
-#results ol > li .container .stretch .pricing li .quantity {
+#results ol > li .container .pricing li.quantity select {
   width: 50px;
 }
-#results ol > li .container .stretch .pricing li .btn_addBasket {
+#results ol > li .container .pricing li .btn_addBasket {
   background: url("../images/btn-bgs.png") no-repeat;
   padding: 9px 13px 9px;
-  display: block;
+  display: inline-block;
   color: #FFF000;
   font-family: Arial;
   font-weight: bold;
@@ -1084,95 +1178,7 @@ h1 a {
   width: 91px;
   text-decoration: none;
 }
-#results ol > li .container .stretch .pricing li .btn_addBasket:hover {
-  color: #fff;
-}
-#results ol > li .container .stretch .info {
-  font-weight: bold;
-  font-size: 13px;
-  color: #444;
-  float: left;
-  width: 100%;
-  margin-right: -200px;
-}
-#results ol > li .container .stretch .info .machines {
-  margin-right: 200px;
-  padding: 10px;
-  position: relative;
-}
-#results ol > li .container .stretch .info .machines > .title {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  padding-bottom: 10px;
-}
-#results ol > li .container .stretch .info .machines > ul {
-  margin: 0 0 20px 75px;
-  padding: 0;
-  list-style: none;
-  float: left;
-}
-#results ol > li .container .stretch .info .machines > ul li {
-  float: left;
-  padding: 0 5px 5px 0;
-}
-#results ol > li .container .stretch .info .machines > ul li a {
-  background: #DDD;
-  padding: 3px 10px;
-  margin: 0;
-  display: block;
-  text-decoration: none;
-  color: #555;
-}
-#results ol > li .container .stretch .info .machines > ul li a:hover {
-  background: #BBB;
-  color: #333;
-}
-#results ol > li .container .stretch .info .categories {
-  clear: left;
-}
-#results ol > li .container .stretch .info .related {
-  padding-top: 20px;
-}
-#results ol > li .container .stretch .info .related ul {
-  margin: 0;
-  padding: 2px 0 0 0;
-  list-style: none;
-}
-#results ol > li .container .stretch .info .related ul li {
-  margin-bottom: 3px;
-  position: relative;
-  padding-right: 40px;
-}
-#results ol > li .container .stretch .info .related ul li div {
-  display: inline-block;
-}
-#results ol > li .container .stretch .info .related ul li div.part {
-  background: #DDD;
-  color: #555;
-  padding: 3px 10px;
-}
-#results ol > li .container .stretch .info .related ul li div.part a {
-  text-decoration: none;
-  color: #444;
-}
-#results ol > li .container .stretch .info .related ul li div.part:hover {
-  background: #BBB;
-  color: #333;
-}
-#results ol > li .container .stretch .info .related ul li div.add {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
-#results ol > li .container .stretch .info .related ul li div.add a {
-  color: #FFF000;
-  background-color: #01205a;
-  padding: 3px 5px;
-  text-decoration: none;
-  display: inline-block;
-}
-#results ol > li .container .stretch .info .related ul li div.add a:hover {
+#results ol > li .container .pricing li .btn_addBasket:hover {
   color: #fff;
 }
 
@@ -2274,18 +2280,19 @@ h1 a {
   }
 
   /* spares results */
-  #results ol > li .container .stretch .pricing {
+  #results ol > li .container .info {
+    margin-right: 0;
+  }
+  #results ol > li .container .info .machines {
+    margin-right: 0;
+  }
+  #results ol > li .container .pricing {
+    position: static;
+    margin-left: 150px;
     width: inherit;
-    float: none;
   }
-  #results ol > li .container .stretch .pricing li .quantity {
-    width: 90px;
-  }
-  #results ol > li .container .stretch .info {
-    margin-right: 0;
-  }
-  #results ol > li .container .stretch .info .machines {
-    margin-right: 0;
+  #results ol > li .container .pricing .add-to-basket {
+    text-align: right;
   }
 }
 /* tablet portrait and mobile landscape */
@@ -2432,6 +2439,13 @@ h1 a {
     float: none;
     width: 100%;
     background: none;
+  }
+  .container .tabs .bullets {
+    padding: 0;
+  }
+  .container .tabs .bullets li {
+    padding: 0 0 5px 25px;
+    float: none;
   }
   .container .tabs li {
     float: none;
@@ -2735,36 +2749,39 @@ h1 a {
     padding: 10px 12px;
   }
 
-  #results ol > li img {
-    float: none;
-    width: 100%;
-  }
-  #results ol > li .container {
-    float: none;
-    margin-left: 0;
-  }
-  #results ol > li .container .stretch {
-    margin-left: 0;
-  }
-  #results ol > li .container .stretch .pricing {
-    width: inherit;
-    float: none;
-  }
-  #results ol > li .container .stretch .pricing li .quantity {
-    width: 90px;
-  }
-  #results ol > li .container .stretch .info {
-    margin-right: 0;
-  }
-  #results ol > li .container .stretch .info .machines {
-    margin-right: 0;
-  }
-  #results ol > li .container .stretch .info .machines .title {
+  /* spares results */
+  #results ol > li .container .spare-thumbnail {
     position: static;
   }
-  #results ol > li .container .stretch .info .machines > ul {
+  #results ol > li .container .spare-thumbnail img {
+    width: 100%;
+  }
+  #results ol > li .container .info {
+    margin: 0;
+  }
+  #results ol > li .container .info .machines .title {
+    position: static;
+    padding-left: 0;
+  }
+  #results ol > li .container .info .machines .related h4 {
+    text-decoration: underline;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+  }
+  #results ol > li .container .info .machines > ul {
     margin: 0 0 20px 0;
-    float: left;
+  }
+  #results ol > li .container .pricing {
+    position: static;
+    margin-left: 0;
+    width: inherit;
+  }
+  #results ol > li .container .pricing .add-to-basket {
+    text-align: right;
+  }
+  #results ol > li .container .pricing li.quantity select {
+    width: 100%;
+    margin-top: 10px;
   }
 
   #configure-machine select {
