--- a/css/marshall.css
+++ b/css/marshall.css
@@ -2442,6 +2442,7 @@ h1 a {
   }
   .container .tabs .bullets {
     padding: 0;
+    margin: 0;
   }
   .container .tabs .bullets li {
     padding: 0 0 5px 25px;
@@ -2478,6 +2479,7 @@ h1 a {
   }
   .container .tabs li.active .copy-block {
     display: block;
+    min-height: inherit;
   }
   .container .tabs .copy-block {
     display: none;
@@ -2778,6 +2780,9 @@ h1 a {
   }
   #results ol > li .container .pricing .add-to-basket {
     text-align: right;
+  }
+  #results ol > li .container .pricing li {
+    padding: 5px 10px;
   }
   #results ol > li .container .pricing li.quantity select {
     width: 100%;
