--- a/css/marshall.css
+++ b/css/marshall.css
@@ -1827,7 +1827,7 @@ h1 a {
   margin-bottom: 20px;
   font-size: 0.85em;
   color: #ccc;
-  text-align: center;
+  text-align: left;
 }
 
 .footer a {
@@ -1840,7 +1840,7 @@ h1 a {
 }
 
 .footer ul {
-  margin: 0;
+  margin: 0 0 0 10px;
   padding: 0;
   list-style: none;
 }
@@ -1907,6 +1907,7 @@ h1 a {
   padding: 10px;
   margin-top: 10px;
   color: #407f12;
+  text-align: center;
 }
 
 .made-by p {
