--- a/css/marshall.css
+++ b/css/marshall.css
@@ -1194,26 +1194,69 @@ h1 a {
   color: #fff;
   font-size: 1.4em;
 }
-
 #config_machine .step span {
   color: #fff000;
+  font-size: 1.5em;
 }
 
 /* step 1 */
-#config_machine .configure {
-  padding: 8px 15px;
+.desktop #config_machine .configure {
+  float: right;
+  margin-top: 5px;
+  margin-right: 10px;
+  min-width: 385px;
+}
+.desktop #config_machine .step label {
+  color: #fff000;
+  font-size: 13px;
+  font-weight: bold;
+  float: left;
+  width: 120px;
+  text-align: right;
+  line-height: 110%;
+  margin-right: 15px;
+}
+.desktop #config_machine .step select {
+  width: 240px;
+  margin-top: 4px;
+  float: left;
+}
+
+.mobile #config_machine .configure {
+  padding: 15px;
   background: #fff;
   margin-bottom: 1px;
+}
+.mobile #config_machine label {
+  display: none;
+}
+.mobile #config_machine select {
+  width: inherit;
+  padding-right: 15px;
+  margin: 0;
+}
+
+.desktop #config_machine .empty-configuration {
+  width: 100%;
+  height: 111px;
+  padding: 0;
+  background: url("../images/select_config.jpg") 510px 0 no-repeat;
+}
+.desktop #config_machine .empty-configuration h3 {
+  display: none;
+}
+.desktop #config_machine .configure-content {
+  min-height: 240px;
+}
+
+.mobile #config_machine .empty-configuration {
+  padding: 15px;
 }
 
 #config_machine .configure-content {
   background: #fff;
   position: relative;
   min-height: 270px;
-}
-
-#config_machine .empty-configuration {
-  padding: 15px;
 }
 
 #config_machine .configure-content:after {
@@ -1226,19 +1269,14 @@ h1 a {
   position: absolute;
   top: 0;
   left: 0;
-  padding: 15px;
   -webkit-appearance: none;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-#config_machine .configure-content .img img {
-  border: 1px solid #ccc;
-}
-
 #config_machine .configure-content .content {
-  margin-left: 460px;
+  margin-left: 440px;
   padding: 12px 15px 18px 15px;
 }
 
@@ -1246,31 +1284,40 @@ h1 a {
   margin: 0 0 10px 0;
   padding: 0;
   list-style: none;
-  border-bottom: 1px solid #dcdcdc;
 }
 
 #config_machine .configure-content .content .specs li {
   padding: 8px 15px;
   margin-top: 2px;
   background-color: #ececec;
+  color: #001748;
 }
 
 #config_machine .configure-content .content h3 {
   font-size: 1.4em;
   margin-bottom: 7px;
   text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5);
+  color: #001748;
 }
 
 #config_machine .configure-content .content h4 {
-  font-size: 1.4em;
+  font-size: 1.1em;
   text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5);
-  margin-bottom: 40px;
+  float: left;
 }
 
-#config_machine .configure-content .content .big-link {
-  position: absolute;
-  bottom: 15px;
-  right: 15px;
+#config_machine .add-options {
+  width: 177px;
+  height: 43px;
+  background: url("../images/options-btn.png") 0 0 no-repeat;
+  text-decoration: none;
+  text-indent: -9000px;
+  display: block;
+  float: right;
+  margin-top: -3px;
+}
+#config_machine .add-options:hover {
+  background-position: bottom left;
 }
 
 /* step n */
